<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pranksound</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_categories">Categories</string>
    <string name="human">Man Made</string>
    <string name="movies">Popular</string>
    <string name="environment">Scary</string>
    <string name="background">Background</string>
    <string name="about">ABOUT</string>
    <string name="quit">QUIT</string>
    <string name="abouttitle">ABOUT THIS PROGRAM</string>
    <string name="aboutmessage">Prank Sound V1.0 by Yulun and Jason.</string>
    <string name="about_ok">OK</string>
    <string name="about_detail">Detail</string>
    <string name="title_activity_environment">Environment</string>
    <string name="prank_sound">Prank Sound version 1.0</string>
    <string name="description_hint">Prank Sound version 1.0</string>
    <string name="choose_hint">Choose one and give it a shot!</string>
    <string name="choose_warning">My dear prankster, please select an audio first.</string>
    <string name="title_activity_about">About</string>
    <string name="error_title">Fatal Error</string>
    <string name="error_message">Oops.Seems a fatal error has occurred.Please wait while the application recovers.</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_human">Man Made</string>
    <string name="title_activity_renwei">Man Made</string>
    <string name="title_activity_ren">People</string>
    <string name="title_activity_movie">From Movies</string>

</resources>